crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__variable__varcalc.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/variable/varcalc
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "The values are true and -1 and -6 and aa.\n" [Ended]
outcome: Ended
