crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__variable__variable-declaration.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/variable/variable-declaration
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "\"My name is Jean Passepartout, but my friend's call me Jackie. I'm 23 years old.\"\n" [Done]
outcome: Done
