crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__variable__varstringinc.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/variable/varstringinc
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "inc" (0) -> 0]
> "inc\n" [Continue]
> "ab.\n" [Ended]
outcome: Ended
